--- a/templates/psql-backup-s3.env
+++ b/templates/psql-backup-s3.env
@@ -1,11 +1,18 @@
-export ROTATION_PERIOD=<days-to-keep-backups> #exclude to stop backups from deleting
-export GPG_KEY=<exported-public-gpg-key>
-export GPG_KEY_ID=<email-id-used-in-gpg-key-generation>
-export POSTGRES_PASSWORD=
-export POSTGRES_USER=
-export POSTGRES_HOST=
-export POSTGRES_DB=
-export AWS_ACCESS_KEY_ID=
-export AWS_SECRET_ACCESS_KEY=
-export AWS_DEFAULT_REGION=
-export S3_BUCKET=<bucket-name>
+export ROTATION_PERIOD=           # days to keep backups (exclude to stop backups from deleting)
+export POSTGRES_PASSWORD=         # PSQL PASSWORD
+export POSTGRES_USER=             # PSQL USERNAME
+export POSTGRES_HOST=             # postgres hostname
+export POSTGRES_DB=               # name of database to backup
+export AWS_ACCESS_KEY_ID=         # AWS IAM USER ID
+export AWS_SECRET_ACCESS_KEY=     # AWS IAM USER KEY
+export AWS_DEFAULT_REGION=        # aws s3 bucket region
+export S3_BUCKET=                 # aws s3 bucket name
+export GPG_KEY_ID=                # email id used in gpg key generation
+export GPG_KEY=                   # exported public gpg key
+
+
+
+
+
+
+
