update readme and file lint

--- a/templates/psql-backup-s3.config.yaml
+++ b/templates/psql-backup-s3.config.yaml
@@ -10,5 +10,5 @@ data:
   AWS_DEFAULT_REGION:   # aws s3 bucket region
   S3_BUCKET:            # aws s3 bucket name
   GPG_KEY_ID:           # email id used in gpg key generation
-  GPG_KEY: |            # exported public gpg key
+  GPG_KEY:              # exported public gpg key
 ---
